trunk/Archive/095a44f0eacd1eb442a7a17bc7094f94-cc73e281b3b6abc9bf6cf4f153b944a6/output
+ g++ -std=c++11 main.cpp -O3
main.cpp:7:1: error: stray ‘`’ in program
 === Now, a tricky bit:  `((A)&&(B)) is the same as `(!A)||(!B)`
 ^
main.cpp:7:1: error: stray ‘`’ in program
main.cpp:7:1: error: stray ‘`’ in program
main.cpp:1:1: error: ‘the’ does not name a type
 the input does not match the var type OR x is anything other than 1, 2, or 3. 
 ^
